fix: Added horizontal align

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -276,6 +276,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .section-footer {
     padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
